# vsock-kmp

./: .gitignore  .jitpack.yml  CMakeLists.txt  LICENSE  README.md  build.gradle.kts  local.properties  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: VSockImpl.cpp  VSockImpl.h
src/main/kotlin/: VSockImpl.kt
src/main/kotlin/vsock/: BaseVSock.kt  ServerVSock.kt  VSock.kt  VSockAddress.kt  VSockInputStream.kt  VSockOutputStream.kt
src/test/kotlin/: VSockImplTest.kt
